--- a/backend/python/requirements.txt
+++ b/backend/python/requirements.txt
@@ -1,8 +1,11 @@
 annotated-types==0.7.0
 anyio==4.6.2.post1
+certifi==2024.8.30
 click==8.1.7
 fastapi==0.115.5
 h11==0.14.0
+httpcore==1.0.7
+httpx==0.27.2
 idna==3.10
 pydantic==2.10.1
 pydantic_core==2.27.1
