--- a/backend/rust_core/Cargo.toml
+++ b/backend/rust_core/Cargo.toml
@@ -3,10 +3,21 @@ name = "rust_core"
 version = "0.1.0"
 edition = "2021"
 
+[workspace]
+members = [
+    "core",
+    "keys"
+]
+
 [lib]
-name = "rust_backend"
+name = "main"
+path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
-pyo3 = { version = "0.19.2", features = ["extension-module"] }
 sha2 = { version = "0.10.8", default-features = false } # Cryptography utility
+k256 = "0.11.0"      # For secp256k1
+p256 = "0.11.0"      # For secp256r1
+serde = { version = "1.0", features = ["derive"] } # For JSON serialization/deserialization
+serde_json = "1.0"   # For JSON support
+clap = { version = "4.0", features = ["derive"] }  # For CLI parsing
