--- a/backend/rust_crypto/Cargo.toml
+++ b/backend/rust_crypto/Cargo.toml
@@ -20,8 +20,10 @@ thiserror = "1.0.30"
 # For Cryptographic operations
 k256 = { version = "0.14.0-pre.2", features = ["ecdsa"] }
 rand = "0.8.5"
+rand_core = "0.6.4"
 rand_chacha = "0.3"
 base64 = "0.21"
+elliptic-curve = "0.13.8"
 
 # For JSON parsing
 serde = { version = "1.0", features = ["derive"] }
